compilation/python/compile-output.txt
  File "compilation/python/input.py", line 3
    int main()
        ^
SyntaxError: invalid syntax
